<resources>
    <string name="app_name">Micro Housing System</string>
    <string name="Login">btn_login</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_set_up_residence">SetUpResidence</string>>
    <string name="action_settings">Settings</string>
    <string name="applicant" />
    <string name="ho" />
    <string name="app" />
    <string name="add" />

    <string name="add_residence">Add Residence</string>
    <string name="enter_residence">Enter Residence</string>
    <string name="hint_address">Enter Address</string>
    <string name="hint_available">Enter Available Units</string>
    <string name="hint_size">Enter Size of Unit (sqft)</string>
    <string name="hint_rental">Enter Monthly Rental</string>
    <string name="sure_text">Are you sure?</string>
    <string name="no_text">no</string>
    <string name="yes_text">yes</string>
    <string name="edit_residence">Edit Residence</string>
    <string name="update_text">Update</string>
    <string name="save_button">Save</string>
    <string name="LoginAP" />
    <string name="LoginHO" />
    <string name="RelativeLayout">RelativeLayout</string>
    <string name="submitApp" />
    <string name="accept" />
    <string name="delete" />
    <string name="back" />

</resources>
