<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/enter_item"
                android:textSize="18sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/residenceAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:hint="@string/hint_address" />

            <EditText
                android:id="@+id/residenceAvailable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/residenceAddress"
                android:hint="@string/hint_available"
                android:inputType="number" />

            <EditText
                android:id="@+id/residenceSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/residenceAvailable"
                android:hint="@string/hint_size" />

            <EditText
                android:id="@+id/residenceRental"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/residenceSize"
                android:hint="@string/hint_rental"
                android:inputType="number" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/residenceRental"
                android:layout_marginEnd="5dp"
                android:background="@color/colorAccent"
                android:onClick="@string/save_button"
                android:text="@string/save_button"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>