<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:padding="23dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_alert"
                android:text="@string/sure_text"
                android:layout_centerHorizontal="true"
                android:padding="6dp"
                android:textSize="17sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/conf_no_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_alert"
                android:layout_alignParentStart="true"
                android:layout_marginStart="23dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorAccent"
                android:onClick="@string/no_text"
                android:text="@string/no_text"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/conf_yes_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_alert"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="23dp"
                android:background="@color/colorAccent"
                android:onClick="@string/yes_text"
                android:text="@string/yes_text"
                android:textColor="@android:color/white" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>